--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "lint": "eslint ./src --ext .ts,.tsx --fix",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
     "test": "jest",
-    "pub": "npm run lint && npm run prettier && npm run test && gulp && npm publish --access=public"
+    "pub": "npm run lint && npm run prettier && npm run test && gulp && npm publish"
   },
   "main": "lib/index.js",
   "files": [
@@ -17,36 +17,37 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "~7.17.10",
-    "@babel/plugin-proposal-class-properties": "~7.16.7",
-    "@babel/plugin-proposal-decorators": "~7.17.9",
-    "@babel/plugin-transform-runtime": "~7.17.10",
-    "@babel/preset-env": "~7.17.10",
-    "@babel/preset-typescript": "~7.16.7",
-    "@babel/register": "~7.17.7",
-    "@baic/eslint-config-yolk": "~1.0.23",
-    "@types/jest": "~27.5.0",
-    "@types/rimraf": "~3.0.2",
-    "axios": "~0.27.2",
-    "babel-plugin-lodash": "~3.3.4",
-    "eslint": "7.x",
-    "gulp": "~4.0.2",
-    "gulp-babel": "~8.0.0",
-    "gulp-clean": "~0.4.0",
-    "gulp-load-plugins": "~2.0.7",
-    "gulp-terser": "~2.1.0",
+    "@babel/core": "~7.x",
+    "@babel/plugin-proposal-class-properties": "~7.x",
+    "@babel/plugin-proposal-decorators": "~7.x",
+    "@babel/plugin-transform-runtime": "~7.x",
+    "@babel/preset-env": "~7.x",
+    "@babel/preset-typescript": "~7.x",
+    "@babel/register": "~7.x",
+    "@baic/eslint-config-yolk": "~2.1.0-alpha.90",
+    "@types/jest": "~29.x",
+    "@types/rimraf": "~3.0.x",
+    "axios": "~1.2.x",
+    "babel-plugin-lodash": "~3.3.x",
+    "eslint": "8.x",
+    "gulp": "~4.0.x",
+    "gulp-babel": "~8.0.x",
+    "gulp-clean": "~0.4.x",
+    "gulp-load-plugins": "~2.0.x",
+    "gulp-terser": "~2.1.x",
     "gulp-typescript": "~6.0.0-alpha.1",
-    "jest": "~28.1.0",
-    "rimraf": "~3.0.2",
+    "jest": "~29.x",
+    "rimraf": "~4.x",
     "typescript": "4.x"
   },
   "dependencies": {
-    "@types/lodash": "~4.14.182",
-    "@types/mustache": "~4.1.2",
-    "chalk": "5.0.0",
-    "lodash": "~4.17.21",
-    "mustache": "~4.2.0",
-    "prettier": "~2.6.2",
-    "reflect-metadata": "~0.1.13"
+    "@babel/runtime": "~7.x",
+    "@types/lodash": "~4.x",
+    "@types/mustache": "~4.2.x",
+    "chalk": "5.x",
+    "lodash": "~4.x",
+    "mustache": "~4.2.x",
+    "prettier": "~2.x",
+    "reflect-metadata": "~0.1.x"
   }
 }
