--- a/package.json
+++ b/package.json
@@ -1,53 +1,51 @@
 {
   "name": "@baic/docs-transform-typescript-declaration",
   "version": "1.0.2",
-  "scripts": {
-    "lint": "eslint ./src --ext .ts,.tsx --fix",
-    "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
-    "test": "jest",
-    "pub": "npm run lint && npm run prettier && npm run test && gulp && npm publish"
-  },
-  "main": "lib/index.js",
-  "files": [
-    "lib"
-  ],
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git+https://github.com/303394539/docs-transform-typescript-declaration.git"
   },
   "license": "MIT",
-  "devDependencies": {
-    "@babel/core": "~7.x",
-    "@babel/plugin-proposal-class-properties": "~7.x",
-    "@babel/plugin-proposal-decorators": "~7.x",
-    "@babel/plugin-transform-runtime": "~7.x",
-    "@babel/preset-env": "~7.x",
-    "@babel/preset-typescript": "~7.x",
-    "@babel/register": "~7.x",
-    "@baic/eslint-config-yolk": "~2.1.0-alpha.90",
-    "@types/jest": "~29.x",
-    "@types/rimraf": "~3.0.x",
-    "axios": "~1.2.x",
-    "babel-plugin-lodash": "~3.3.x",
-    "eslint": "8.x",
-    "gulp": "~4.0.x",
-    "gulp-babel": "~8.0.x",
-    "gulp-clean": "~0.4.x",
-    "gulp-load-plugins": "~2.0.x",
-    "gulp-terser": "~2.1.x",
-    "gulp-typescript": "~6.0.0-alpha.1",
-    "jest": "~29.x",
-    "rimraf": "~4.x",
-    "typescript": "4.x"
+  "main": "lib/index.js",
+  "module": "es/index.js",
+  "typings": "lib/index.d.ts",
+  "files": [
+    "compiled",
+    "lib",
+    "es"
+  ],
+  "scripts": {
+    "build": "father build",
+    "lint": "eslint ./src --ext .ts,.tsx --fix",
+    "prebundle": "father prebundle",
+    "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
+    "pub": "npm run lint && npm run prettier && npm run test && npm run build && npm publish",
+    "test": "jest"
   },
   "dependencies": {
-    "@babel/runtime": "~7.x",
-    "@types/lodash": "~4.x",
-    "@types/mustache": "~4.2.x",
+    "@types/lodash": "4.x",
+    "@types/prettier": "2.x",
     "chalk": "5.x",
-    "lodash": "~4.x",
-    "mustache": "~4.2.x",
-    "prettier": "~2.x",
-    "reflect-metadata": "~0.1.x"
+    "lodash": "4.x",
+    "prettier": "2.x"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "7.x",
+    "@babel/plugin-proposal-decorators": "7.x",
+    "@babel/plugin-transform-runtime": "7.x",
+    "@babel/preset-env": "7.x",
+    "@babel/preset-typescript": "7.x",
+    "@baic/eslint-config-yolk": "~2.1.0-alpha.235",
+    "@baic/father-plugin-yolk": "~2.1.0-alpha.235",
+    "@baic/prettier-config-yolk": "~2.1.0-alpha.235",
+    "@types/jest": "29.x",
+    "@types/mustache": "4.2.x",
+    "eslint": "8.x",
+    "father": "4.5.x",
+    "jest": "29.x",
+    "mustache": "4.2.x",
+    "rimraf": "5.0.x",
+    "tslib": "2.7.x",
+    "typescript": "5.x"
   }
 }
