--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "@baic/prettier-config-yolk": "~2.1.0-alpha.235",
     "@types/jest": "29.x",
     "@types/mustache": "4.2.x",
+    "@types/node": "*",
     "eslint": "8.x",
     "father": "4.5.x",
     "jest": "29.x",
     "mustache": "4.2.x",
-    "rimraf": "5.0.x",
     "tslib": "2.7.x",
     "typescript": "5.x"
   }
