--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "prebundle": "father prebundle",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
     "pub": "npm run lint && npm run prettier && npm run test && npm run build && npm publish",
-    "test": "jest"
+    "test": "vitest run"
   },
   "dependencies": {
     "@types/lodash": "4.x",
@@ -29,22 +29,16 @@
     "prettier": "2.x"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "7.x",
-    "@babel/plugin-proposal-decorators": "7.x",
-    "@babel/plugin-transform-runtime": "7.x",
-    "@babel/preset-env": "7.x",
-    "@babel/preset-typescript": "7.x",
-    "@baic/eslint-config-yolk": "~2.1.0-alpha.235",
-    "@baic/father-plugin-yolk": "~2.1.0-alpha.235",
-    "@baic/prettier-config-yolk": "~2.1.0-alpha.235",
-    "@types/jest": "29.x",
+    "@baic/eslint-config-yolk": "~2.1.0-alpha.236",
+    "@baic/father-plugin-yolk": "~2.1.0-alpha.236",
+    "@baic/prettier-config-yolk": "~2.1.0-alpha.236",
     "@types/mustache": "4.2.x",
     "@types/node": "*",
     "eslint": "8.x",
     "father": "4.5.x",
-    "jest": "29.x",
     "mustache": "4.2.x",
     "tslib": "2.7.x",
-    "typescript": "5.x"
+    "typescript": "5.x",
+    "vitest": "2.1.x"
   }
 }
