--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint": "eslint ./src --ext .ts,.tsx --fix",
     "prebundle": "father prebundle",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
-    "pub": "npm run lint && npm run prettier && npm run test && npm run build && npm publish",
+    "pub": "npm run prettier && npm run lint && npm run test && npm run build && npm publish",
     "test": "vitest run"
   },
   "dependencies": {
@@ -40,5 +40,8 @@
     "tslib": "2.7.x",
     "typescript": "5.x",
     "vitest": "2.1.x"
+  },
+  "engines": {
+    "node": ">16"
   }
 }
