--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "vitest": "2.1.x"
   },
   "engines": {
-    "node": ">16"
-  }
+    "node": ">=16",
+    "pnpm": "8"
+  },
+  "packageManager": "pnpm@8.15.9"
 }
