--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "typescript": "5.x",
     "vitest": "2.1.x"
   },
+  "packageManager": "pnpm@8.15.9",
   "engines": {
-    "node": ">=16",
+    "node": ">=14",
     "pnpm": "8"
-  },
-  "packageManager": "pnpm@8.15.9"
+  }
 }
