--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [16.x, 18.x]
         os: [ubuntu-latest, windows-latest]
       fail-fast: false
     steps:
@@ -37,23 +37,6 @@ jobs:
       - name: Install pnpm
         if: ${{ matrix.node-version != '14.x' }}
         uses: pnpm/action-setup@v4
-
-      - name: Get pnpm version (node 14)
-        if: ${{ matrix.node-version == '14.x' }}
-        uses: actions/github-script@v7
-        id: pnpm-version
-        with:
-          result-encoding: string
-          script: |
-            const packageJson = require('./package.json')
-            const pnpmVersion = packageJson.packageManager.split('@')[1]
-            console.log(`Use pnpm ${pnpmVersion}`)
-            return pnpmVersion
-
-      - name: Install pnpm (node 14)
-        if: ${{ matrix.node-version == '14.x' }}
-        run: |
-          npm install -g @pnpm/exe@${{ steps.pnpm-version.outputs.result }}
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
