--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node-version: [16.x, 18.x]
+        node-version: [16.x, 18.x, 20.x]
         os: [ubuntu-latest, windows-latest]
       fail-fast: false
     steps:
@@ -66,7 +66,6 @@ jobs:
       - name: Install dependencies
         run: pnpm i
 
-      - run: pnpm run prettier
       - run: pnpm run lint
       - run: pnpm test
       - run: pnpm run build
